--- a/src/app/_pages/users/user-profile/user-profile.component.html
+++ b/src/app/_pages/users/user-profile/user-profile.component.html
@@ -63,20 +63,12 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="logout" (click)="logout()" *ngIf="!isAdmVision">
+              <!--   <button type="button" class="logout" (click)="logout()" *ngIf="!isAdmVision">
                     <span> Deslogar da sua conta </span>
-                </button>
+                </button> -->
             </div>
             <div class="right-side col-8">
                 <div class="row buttons-row">
-                    <div class="buttons-wrapper">
-                        <button type="button" class="col-3 btn-cancel" (click)="cancel()" *ngIf="editMode">
-                            <span> Cancelar </span>
-                        </button>
-                        <button type="button" class="col-3 save" (click)="save()" *ngIf="editMode">
-                            <span> Salvar alterações </span>
-                        </button>
-                    </div>
                     <button type="button" class="col-3 edit" (click)="edit()" *ngIf="!editMode">
                         <span class="material-symbols-outlined">
                             edit
@@ -178,6 +170,14 @@
                         </div>
                     </div>
                 </form>
+                <div class="buttons-wrapper">
+                    <button type="button" class="col-3 btn-cancel" (click)="cancel()" *ngIf="editMode">
+                        <span> Cancelar </span>
+                    </button>
+                    <button type="button" class="col-3 save" (click)="save()" *ngIf="editMode">
+                        <span> Salvar alterações </span>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
