--- a/src/app/_pages/users/user-profile/user-profile.component.scss
+++ b/src/app/_pages/users/user-profile/user-profile.component.scss
@@ -109,6 +109,9 @@
 .right-side {
   max-width: 60%;
   margin-left: 3%;
+  form {
+    height: 85%;
+  }
 }
 .logout {
   background: none;
@@ -129,7 +132,6 @@
   justify-content: center;
 }
 .buttons-wrapper {
-  min-height: 32%;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
@@ -143,7 +145,7 @@
   align-items: center;
   display: flex;
   padding: 1%;
-  max-width: 12rem;
+  max-width: 10rem;
   justify-content: center;
   margin-right: 10px;
 }
@@ -156,13 +158,13 @@
   border-radius: 5px;
   display: flex;
   padding: 1%;
-  max-width: 12rem;
+  max-width: 10rem;
   justify-content: center;
 }
 
 .buttons-row {
   display: flex;
-  min-height: 40px;
+  min-height: 30px;
   justify-content: flex-end;
 }
 
