--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
                 <span class="ms-1 menu-item-label">Seu perfil</span>
               </a>
             </li>
-            <li class="nav-item disabled" routerLinkActive="">
-                <a [routerLink]="['/']" class="nav-link align-middle px-0">
+            <li class="nav-item" routerLinkActive="item-selected">
+                <a [routerLink]="['/recomendations']" class="nav-link align-middle px-0">
                   <span class="icons_google material-symbols-outlined">
                     dashboard
                     </span>
@@ -61,7 +61,7 @@
                 <span class="ms-1 menu-item-label">Descartados</span>
               </a>
             </li>
-            <li class="nav-item" routerLinkActive="item-selected">
+            <li class="nav-item" routerLinkActive="item-selected" *ngIf="authService.user.role == 'ADMIN'">
               <a [routerLink]="['/list-users']" class="nav-link align-middle px-0">
                 <span class="icons_google material-symbols-outlined">
                   group
