Removendo botões de avanço para testes

--- a/src/app/_pages/create-account/create-account.component.html
+++ b/src/app/_pages/create-account/create-account.component.html
@@ -238,11 +238,11 @@
                                 <button class="btn-advance">
                                     <span>Próximo</span>
                                 </button>
-                                &nbsp;
+                                <!-- &nbsp;
                                 <button type="button" class="btn btn-info" style="margin-top: 0.5rem;"
                                     (click)="goToServiceData()">
                                     <span>Avançar</span>
-                                </button>
+                                </button> -->
                             </div>
                         </div>
                         <div>
@@ -360,11 +360,6 @@
                                         &nbsp;
                                         <button class="btn-advance">
                                             <span>Próximo</span>
-                                        </button>
-                                        &nbsp;
-                                        <button type="button" class="btn btn-info" style="margin-top: 0.5rem;"
-                                            (click)="goToPlanSelection()">
-                                            <span>Avançar</span>
                                         </button>
                                     </div>
                                 </div>
