--- a/src/app/_components/users/user-list/user-list.component.scss
+++ b/src/app/_components/users/user-list/user-list.component.scss
@@ -168,11 +168,13 @@
 .details {
     color: #2871ff;
     cursor: pointer;
-    margin-right: 10px;
+    font-size: 1.6rem;
 }
 .change-password {
     color: #d40909;
     cursor: pointer;
+    font-size: 1.6rem;
+    margin-left: 3rem;
 }
 .buttons-filter {
     display: flex;
