--- a/src/app/_pages/users/user-profile/user-profile.component.html
+++ b/src/app/_pages/users/user-profile/user-profile.component.html
@@ -79,19 +79,19 @@
                 <form [formGroup]="userForm" (submit)="save()" *ngIf="currentTab === tabOptions.PROFILE">
                     <div class="">
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Nome</label>
                                 <input type="text" class="form-control" formControlName = "name" name="username">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Sobrenome</label>
                                 <input type="text" class="form-control" formControlName = "lastName" name="lastName">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>CPF/CNPJ</label>
                                 <input type="text" [mask]="mask" class="form-control" formControlName = "cpfCnpj" name="cpfCnpj"
                                 [ngClass]="{'invalid-field': !userForm.get('cpfCnpj').valid && showErrors}">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Email</label>
                                 <input type="text" class="form-control" formControlName = "email" name="email"
                                 [ngClass]="{'invalid-field': userForm.get('email').invalid && showErrors}">
@@ -113,12 +113,82 @@
                                 </div>
                             </div>
                         </div>
+                        <button type="button" class="col-3 edit password" (click)="ededitPassword()" *ngIf="editMode && !passwordEdit && !isAdmVision">
+                            <span class="material-symbols-outlined">
+                                lock_reset
+                            </span>
+                            <span> Alterar senha </span>
+                        </button>
+                        <form [formGroup]="passwordForm" *ngIf="passwordEdit">
+                                <div class="form-group row">
+                                    <div class="form-group col-4">
+                                        <label>Nova senha</label>
+                                        <div class="password-fields">
+                                            <input class="form-control" [type]="passwordFieldVisible ? 'text' : 'password'" 
+                                            formControlName="password"
+                                            [ngClass]="{'invalid-field': passwordForm.get('passwordConfirm').valid && 
+                                            passwordForm.get('passwordConfirm').touched && 
+                                            passwordForm.get('passwordConfirm').value != passwordForm.get('password').value && 
+                                            passwordForm.get('password').value != ''}">
+                                                <span class="dds__icons" [ngClass]="{
+                                                    'dds__eye-view-on': passwordFieldVisible, 
+                                                    'dds__eye-view-off': !passwordFieldVisible
+                                                }" (click)="toglePasswordField()"></span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group col-4">
+                                        <label>Redigite sua nova senha</label>
+                                        <div class="password-fields">
+                                            <input class="form-control" [type]="passwordConfirmationFieldVisible ? 'text' : 'password'" 
+                                            formControlName="passwordConfirm"
+                                            [ngClass]="{'invalid-field': passwordForm.get('passwordConfirm').valid && 
+                                            passwordForm.get('passwordConfirm').touched && 
+                                            passwordForm.get('passwordConfirm').value != passwordForm.get('password').value && 
+                                            passwordForm.get('password').value != ''}">
+                                                <span class="dds__icons" [ngClass]="{
+                                                    'dds__eye-view-on': passwordConfirmationFieldVisible, 
+                                                    'dds__eye-view-off': !passwordConfirmationFieldVisible
+                                                }" (click)="toglePasswordConfirmField()"></span>
+                                        </div>
+                                        <div class="invalid-message" *ngIf="
+                                        passwordForm.get('passwordConfirm')?.value != passwordForm.get('password')?.value && passwordForm.get('password').valid">
+                                            <span>Este campo deve ser igual ao campo senha!</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div *ngIf="!passwordForm.get('password').valid">
+                                    <label class="password-errors-label">Sua senha deve conter</label>
+                                    <div class="password-errors">
+                                        <div class="errors" *ngIf="!passwordForm.get('password').hasError('minLength')">
+                                            <span class="dot">
+                                            </span>
+                                            <label>Mais de 8 caracteres</label>
+                                        </div>
+                                        <div class="errors" *ngIf="!passwordForm.get('password').hasError('hasUpperCase')">
+                                            <span class="dot">
+                                            </span>
+                                            <label>Uma letra maiúscula </label>
+                                        </div>
+                                        <div class="errors" *ngIf="!passwordForm.get('password').hasError('hasNumeric')">
+                                            <span class="dot">
+                                            </span>
+                                            <label>Um número</label>
+                                        </div>
+                                        <div class="errors" *ngIf="!passwordForm.get('password').hasError('specialCharacters')">
+                                            <span class="dot">
+                                            </span>
+                                            <label>Um caractere especial</label>
+                                        </div>
+                                    </div>
+                                </div>  
+                            
+                        </form>
                     </div>
                 </form>
                 <form [formGroup]="userForm" (submit)="save()" *ngIf="currentTab === tabOptions.SERVICE">
                     <div class="">
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Selecione um segmento</label>
                                 <ng-select 
                                     [items]="segments"
@@ -135,7 +205,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Selecione as atividades</label>
                                 <ng-select 
                                     [items]="activities"
@@ -152,7 +222,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-7">
+                            <div class="form-group col-8">
                                 <label>Escolha a abrangencia territorial</label>
                                 <ng-select 
                                     [items]="states"
