--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,6 +27,14 @@
   margin-top: 15%;
 }
 
+.sub-menu{
+  width: 80% !important;
+  cursor: pointer;
+  &:hover {
+    background-color: #ffffff
+  }
+}
+
 .nav-item {
   height: 100%;
   width: 92%;
@@ -37,6 +45,8 @@
   padding: 6px 20px;
   border-radius: 30px 0px 0px 30px;
   margin: 4px 0px 4px 1px;
+
+ 
   
   span {
     color: #000;
