Inclusão de identificador da versão

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,6 +92,7 @@
       </div>
     </div>
 </div>
+<div style="display: none;">{{getVersion()}}</div>
 <app-toast *ngIf="!accessToken"></app-toast>
 <router-outlet *ngIf="!accessToken"></router-outlet>
 <app-custom-loader></app-custom-loader>
