--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,98 +1,99 @@
-  <div class="topbar-logo" *ngIf="!accessToken"><img src="../../../assets/images/captiLogo.png" class="logo"></div>
-  <div class="container-fluid" *ngIf="accessToken">
-    <div class="row flex-nowrap">
-      <div class="col-auto col-md-3 col-xl-2 px-0 side-menu-body" >
-        <img src="../../../assets/images/captiLogo.png" class="logo">
-        <div class="d-flex flex-column align-items-end pt-2 min-vh-100">
-          <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center" id="menu">
-            <li (click)="admSubMenu(false)" class="nav-item nav-profile-label" routerLinkActive="item-selected">
-              <a [routerLink]="['/profile']" class="nav-link align-middle px-0 profile-label">
-                <div class="user-img">
-                  <img src="{{authService.user.profileImageUrl}}">
-                </div>
-                <span class="ms-1 menu-item-label">Seu perfil</span>
-              </a>
-            </li>
-            <li class="nav-item" (click)="admSubMenu(false)" routerLinkActive="item-selected">
-                <a [routerLink]="['/recomendations']" class="nav-link align-middle px-0">
-                  <span class="icons_google material-symbols-outlined">
-                    dashboard
-                    </span>
-                  <span class="ms-1 menu-item-label">Recomendação</span>
-                </a>
-            </li>
-            <li class="nav-item disabled" routerLinkActive="">
-              <a [routerLink]="['/']" class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  view_timeline
-                </span>
-                <span class="ms-1 menu-item-label">Área de trabalho</span>
-              </a>
-            </li>
-            <li class="nav-item" (click)="admSubMenu(false)" routerLinkActive="item-selected">
-              <a [routerLink]="['/search']" class="nav-link align-middle px-0">
-                <span class=" icons_google material-symbols-outlined">
-                  quick_reference_all
-                  </span>
-                <span class="ms-1 menu-item-label">Pesquisa</span>
-              </a>
-            </li>
-            <li class="nav-item disabled">
-              <a [routerLink]="['/']" class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  bookmark
-                </span>
-                <span class="ms-1 menu-item-label">Salvos</span>
-              </a>
-            </li>
-            <li class="nav-item disabled">
-              <a [routerLink]="['/']" class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  event_available
-                  </span>
-                <span class="ms-1 menu-item-label">Calendário</span>
-              </a>
-            </li>
-            <li class="nav-item disabled" routerLinkActive="">
-              <a [routerLink]="['/']" class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  thumb_down
-                </span>
-                <span class="ms-1 menu-item-label">Descartados</span>
-              </a>
-            </li>
-            <li class="nav-item" (click)="admSubMenu(true)" routerLinkActive="item-selected" *ngIf="authService.user.role == 'ADMIN'">
-              <a [routerLink]="['/list-users']" class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  group
-                </span>
-                <span class="ms-1 menu-item-label">Administrador</span>
-              </a>
-            </li>
-            <li class="nav-item sub-menu" (click)="inviteSend()" *ngIf="authService.user.role == 'ADMIN' && openSubMenu">
-              <a class="nav-link align-middle px-0">
-                <span class="icons_google material-symbols-outlined">
-                  person_add
-                </span>
-                <span class="ms-1 menu-item-label">Convidar</span>
-              </a>
-            </li>
-          </ul>
-          <li class="nav-item logout" (click)="confirmLogout()">
-            <span class="icons_google material-symbols-outlined ">
-              logout
-            </span>
-            <span class="ms-1 menu-item-label">Logout</span>
+<div class="topbar-logo" *ngIf="!accessToken"><img src="../../../assets/images/captiLogo.png" class="logo"></div>
+<div class="container-fluid" *ngIf="accessToken">
+  <div class="row flex-nowrap">
+    <div class="col-auto col-md-3 col-xl-2 px-0 side-menu-body">
+      <img src="../../../assets/images/captiLogo.png" class="logo">
+      <div class="d-flex flex-column align-items-end pt-2 min-vh-100">
+        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center" id="menu">
+          <li (click)="admSubMenu(false)" class="nav-item nav-profile-label" routerLinkActive="item-selected">
+            <a [routerLink]="['/profile']" class="nav-link align-middle px-0 profile-label">
+              <div class="user-img">
+                <img src="{{authService.user.profileImageUrl}}">
+              </div>
+              <span class="ms-1 menu-item-label">Seu perfil</span>
+            </a>
           </li>
-        </div>
-      </div> 
-      <div class="col py-3 card-principal">
-        <app-toast *ngIf="accessToken"></app-toast>
-        <router-outlet></router-outlet>
+          <li class="nav-item" (click)="admSubMenu(false)" routerLinkActive="item-selected">
+            <a [routerLink]="['/recomendations']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                dashboard
+              </span>
+              <span class="ms-1 menu-item-label">Recomendação</span>
+            </a>
+          </li>
+          <li class="nav-item disabled" routerLinkActive="">
+            <a [routerLink]="['/']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                view_timeline
+              </span>
+              <span class="ms-1 menu-item-label">Área de trabalho</span>
+            </a>
+          </li>
+          <li class="nav-item" (click)="admSubMenu(false)" routerLinkActive="item-selected">
+            <a [routerLink]="['/search']" class="nav-link align-middle px-0">
+              <span class=" icons_google material-symbols-outlined">
+                quick_reference_all
+              </span>
+              <span class="ms-1 menu-item-label">Pesquisa</span>
+            </a>
+          </li>
+          <li class="nav-item disabled">
+            <a [routerLink]="['/']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                bookmark
+              </span>
+              <span class="ms-1 menu-item-label">Salvos</span>
+            </a>
+          </li>
+          <li class="nav-item disabled">
+            <a [routerLink]="['/']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                event_available
+              </span>
+              <span class="ms-1 menu-item-label">Calendário</span>
+            </a>
+          </li>
+          <li class="nav-item disabled" routerLinkActive="">
+            <a [routerLink]="['/']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                thumb_down
+              </span>
+              <span class="ms-1 menu-item-label">Descartados</span>
+            </a>
+          </li>
+          <li class="nav-item" (click)="admSubMenu(true)" routerLinkActive="item-selected"
+            *ngIf="authService.user.role == 'ADMIN'">
+            <a [routerLink]="['/list-users']" class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                group
+              </span>
+              <span class="ms-1 menu-item-label">Administrador</span>
+            </a>
+          </li>
+          <li class="nav-item sub-menu" (click)="inviteSend()" *ngIf="authService.user.role == 'ADMIN' && openSubMenu">
+            <a class="nav-link align-middle px-0">
+              <span class="icons_google material-symbols-outlined">
+                person_add
+              </span>
+              <span class="ms-1 menu-item-label">Convidar</span>
+            </a>
+          </li>
+        </ul>
+        <li class="nav-item logout" (click)="confirmLogout()">
+          <span class="icons_google material-symbols-outlined ">
+            logout
+          </span>
+          <span class="ms-1 menu-item-label">Logout</span>
+        </li>
       </div>
     </div>
+    <div class="col py-3 card-principal">
+      <app-toast *ngIf="accessToken"></app-toast>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
-<div style="display: none;">{{getVersion()}}</div>
 <app-toast *ngIf="!accessToken"></app-toast>
 <router-outlet *ngIf="!accessToken"></router-outlet>
 <app-custom-loader></app-custom-loader>
+<div id="v" class="v">v.{{getVersion()}}</div>
