[Main] - Adding placeholder images to notifications and notices

--- a/src/app/_components/recomendations/recomendations.component.html
+++ b/src/app/_components/recomendations/recomendations.component.html
@@ -12,8 +12,9 @@
         <div class="wrapper row">  
             <div class="left-side col-9">
                 <div class="atualizations row">
-                  <div class="atualizations-placeholder col-6"> atualizations-placeholder</div>
-                  <div class="atualizations-placeholder col-6">atualizations-placeholder</div>
+                  <div class="atualizations-placeholder col-12">
+                    <img src="assets/images/avisos.png"> 
+                  </div>
                 </div>
                 <div class="preview row">
                     <div class="row preview-title">
@@ -92,10 +93,11 @@
                   </div>
                 </div>
                 <div class="notifications-bar">
-                  <div class="notification-placeholder"> notification-placeholder</div>
-                  <div class="notification-placeholder">notification-placeholder</div>
+                  <div class="notification-placeholder">
+                    <img src="assets/images/notifications.png"> 
+                  </div>
                 </div>
-                <div class="upgrade-button-wrapper">
+                <!-- <div class="upgrade-button-wrapper">
                   <div class="upgrade-button">
                     <span class="material-symbols-outlined premium">
                       workspace_premium
@@ -105,7 +107,7 @@
                       <div class="dds__icons dds__chevron-right"></div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
         </div>
