--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="filterForm" (submit)="filter()"> 
       <div class="header">
         <div class="search-bar">
-          <input type="text" name="" id="" placeholder="Pesquisar" formControlName = "agency">
+          <input type="text" name="" id="" placeholder="Pesquisar por agência" formControlName = "agency">
           <button class="dds__icons dds__search"></button>
         </div>
         
