--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -4,23 +4,30 @@
       <div class="title">Login</div>
       <div class="form-group">
         <label for="username">Email</label>
-        <input type="email" class="form-control" required [ngClass]="{'invalid-field': loginForm.get('login').invalid && loginForm.get('login').value !=''}"
-          formControlName = "login" id="username" name="username"
-          aria-describedby="Digitar Email" placeholder="Email">
+        <input type="email" class="form-control" required
+          [ngClass]="{'invalid-field': loginForm.get('login').invalid && loginForm.get('login').value !=''}"
+          formControlName="login" id="username" name="username" aria-describedby="Digitar Email" placeholder="Email">
         <div class="invalid-message" *ngIf="loginForm.get('login').invalid && loginForm.get('login').value !=''">
           <span>Informação não é válida.</span>
         </div>
       </div>
       <div class="form-group">
         <label for="password">Senha</label>
-        <input type="password" class="form-control mb-2" id="password" required
-          formControlName="password" name="password"
-          aria-describedby="Digitar senha" placeholder="Senha">
-          <div class="forgot-password-link">
-            <a href="/password-recovery"> Esqueceu sua senha? </a>
-          </div>
+
+        <div class="input-group">
+          <input [type]="showPassword ? 'text' : 'password'" class="form-control" id="password" required
+            formControlName="password" name="password" aria-describedby="Digitar senha" placeholder="Senha" />
+          <span class="input-group-text" (click)="toggleShowPassword()">
+            <i [class]="showPassword ? 'icon ic-eye-view-hide' : 'icon ic-eye-view'"></i>
+          </span>
+        </div>
+
       </div>
-      
+
+      <div class="forgot-password-link">
+        <a href="/password-recovery"> Esqueceu sua senha? </a>
+      </div>
+
       <button class="btn-advance" type="submit">
         <span>Entrar</span>
       </button>
