--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -13,14 +13,14 @@
       </div>
       <div class="form-group">
         <label for="password">Senha</label>
-
-        <div class="input-group">
+        <div class="password-field">
           <input [type]="showPassword ? 'text' : 'password'" class="form-control" id="password" required
             formControlName="password" name="password" aria-describedby="Digitar senha" placeholder="Senha" />
-          <span class="input-group-text" (click)="toggleShowPassword()">
-            <i [class]="showPassword ? 'icon ic-eye-view-hide' : 'icon ic-eye-view'"></i>
-          </span>
-        </div>
+          <span class="dds__icons" [ngClass]="{
+              'dds__eye-view-on': showPassword, 
+              'dds__eye-view-off': !showPassword
+          }" (click)="toggleShowPassword()"></span>
+      </div>
 
       </div>
 
