--- a/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
+++ b/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
@@ -46,10 +46,29 @@
 
 
 .date {
-    padding: 6%;
+    padding: 1rem 0;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
+    
+    .mat-mdc-form-field {
+        width: 100%;
+        background-color: transparent;
+
+        ::ng-deep .mdc-floating-label {
+            font-size: 0.9rem;
+        }
+
+        ::ng-deep .mat-mdc-text-field-wrapper {
+            background-color: white !important;
+        }
+        
+        ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+            display: none !important;
+        }
+    }
 }
+
+
 .slider{
     margin-bottom: 3%;
     background-color: #fff;
